[tool.poetry]
name = "reinfolib-api-client"
version = "0.1.4"
description = "A reinfolib(不動産情報ライブラリ) API client for Python"
authors = ["ysm001 <ry.ysd01@gmail.com>"]
packages = [{ include = "reinfolib" }]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
requests = "^2.32.3"
pydantic = "^2.8.2"


[tool.poetry.group.dev.dependencies]
python-dotenv = "^1.0.1"
black = "^24.8.0"
isort = "^5.13.2"
autoflake = "^2.3.1"
pytest = "^8.3.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
